# Rust_Proto_Example

./: .gitignore  Cargo.toml  README.md
example_bin_consumer/: Cargo.toml
example_bin_consumer/src/: errors.rs  main.rs
example_lib_consumer/: Cargo.toml
example_lib_consumer/src/: lib.rs  proto_consumer.rs
proto_generator/: build.rs
proto_generator/src/: lib.rs
protos/: export.proto
